--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,10 +1,9 @@
-
 <style>
 .signup-name {
- border-bottom, border-right: 1px #254f75 solid;
+ border-bottom: 1px #254f75 solid;
  }
  .signup-email {
-  border-bottom, border-right: 1px #254f75 solid;
+  border-bottom: 1px #254f75 solid;
   margin-left: 1em;
  }
  .signup {
@@ -26,80 +25,63 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
-
 input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
   color: #bbb5af;
 }
-
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
-
 input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
   color: #bbb5af;
 }
-
 input::placeholder, textarea::placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
-
 input:focus::placeholder, textarea::focus:placeholder {
   color: #bbb5af;
 }
-
 input::-ms-placeholder, textarea::-ms-placeholder {
   color: #aca49c;
   font-size: 0.875em;
 }
-
 input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
   color: #bbb5af;
 }
-
 /* on hover placeholder */
-
 input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
-
 input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
   color: #cbc6c1;
 }
-
 input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
-
 input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
   color: #cbc6c1;
 }
-
 input:hover::placeholder, textarea:hover::placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
-
 input:hover:focus::placeholder, textarea:hover:focus::placeholder {
   color: #cbc6c1;
 }
-
 input:hover::placeholder, textarea:hover::placeholder {
   color: #e2dedb;
   font-size: 0.875em;
 }
-
 input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
   color: #cbc6c1;
 }
-
 body {
+  background: transparent;
   color: #b3aca7;
 }
-
 header {
   position: relative;
   margin: 100px 0 25px 0;
@@ -107,15 +89,12 @@ header {
   text-align: center;
   letter-spacing: 7px;
 }
-
 #form {
   position: relative;
   width: 500px;
   margin: 50px auto 100px auto;
 }
-
 input {
-  font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   width: 470px;
   height: 50px;
@@ -133,12 +112,10 @@ input {
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
 }
-
 input:hover {
-  background: #b3aca7;
-  color: #e2dedb;
+  background: transparent;
+  color: black;
 }
-
 textarea {
   width: 470px;
   max-width: 470px;
@@ -159,29 +136,22 @@ textarea {
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
 }
-
 textarea:hover {
-  background: #92A7BA;
-  color: #e2dedb;
+  background: transparent;
+  color: black;
 }
-
 #submit {
   width: 502px;
   
   padding: 0;
   margin: -5px 0px 0px 0px;
-  
-  font-family: 'Lato', sans-serif;
-  font-size: 0.875em;
-  color: #b3aca7;
-  
+  font-size: 0.875em;  
   outline:none;
   cursor: pointer;
   
   border: solid 1px #b3aca7;
   border-top: none;
 }
-
 #submit:hover {
   color: #e2dedb;
 }
